# youbot_kinematics_rviz

./: CMakeLists.txt  package.xml
cfg/: arm_joint_state.cfg  work_space_state.cfg
launch/: arm_fk_rviz.launch  arm_ik_rviz.launch
src/: ik_joint_state_publisher.cpp  joint_state_publisher.cpp
